# geany-plugins

./: MAINTAINERS  Makefile.am  README  configure.ac  esh_readme.txt  tmp.txt
addons/src/: Makefile.am  addons.c  addons.h  ao_copyfilename.c  ao_copyfilename.h  ao_copyfilepath.c  ao_copyfilepath.h
autoclose/src/: Makefile.am  autoclose.c
geanyctags/src/: Makefile.am  geanyctags.c  readtags.c  readtags.h
geanypy/src/: geanypy-interfaceprefs.c
jsonprettifier/: AUTHORS  ChangeLog  Makefile.am
jsonprettifier/src/: Makefile.am  jsonprettifier.c
latex/src/: templates.c
lineoperations/src/: Makefile.am  lo_prefs.c  lo_prefs.h
multiterm/src/vapi/: geany.vapi
pairtaghighlighter/src/: pair_tag_highlighter.c
po/: POTFILES.in  be.po  ca.po  da.po  de.po  el.po  es.po  esh_readme.txt  fr.po  gl.po  it.po  ja.po  kk.po  nl.po  pt.po  pt_BR.po  ru.po  tr.po  zh_CN.po
pretty-printer/: README
pretty-printer/src/: ConfigUI.c  ConfigUI.h  Makefile.am  PluginEntry.c  PrettyPrinter.c  PrettyPrinter.h
projectorganizer/src/: prjorg-menu.c
runscript/: AUTHORS  ChangeLog  Makefile.am  README
runscript/src/: Makefile.am  runscript.c
setfiletype/: ChangeLog  Makefile.am  README
setfiletype/src/: Makefile.am  setfiletype.c
spellcheck/src/: speller.c
treebrowser/src/: treebrowser.c
utils/src/: Makefile.am  filelist.c  filelist.h  spawn.c  spawn.h  ui_plugins.c  ui_plugins.h
